# WinUI3

./: .gitignore  00_INDEX.md  25_realize_platform_port.md  26_modular_build.md  27_embedded_proof_ci.md  28_public_surface_hygiene.md  30_composable_titlebar.md  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTROLES_MOTOR_GRAFICO.md  Doxyfile  EVALUACION_V1.0.md  GUIA_USO_VISUAL_STUDIO.md  INTEGRACION_RAPIDA.md  PLAN_DE_TRABAJO.md  README.md  README_EN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.md  WIDGETS_DOCUMENTATION.md  cmake_output.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/fonts/: LICENSE-Lucide.txt  atlas.json
cmake/: FluentUIConfig.cmake.in  fluentui.pc.in
docs/: COOKBOOK.md  QUICKSTART.md  index.html
examples/: App.cpp  App.h  EngineEditor.cpp  EngineEditor.h  README.md  main.cpp
include/: FluentGUI.h
include/FluentUI/: API.h
include/Math/: Color.h  Rect.h  Vec2.h
include/Theme/: FluentTheme.h  Material.h  Style.h
include/UI/: FeedbackWidgets.h  Icons.h  Layout.h  NavigationWidgets.h  WidgetHelpers.h  Widgets.h
include/core/: Accessibility.h  Animation.h  Button.h  Context.h  DX11Backend.h  Demo.h  DockSystem.h  DragDrop.h  Element.h  Elevation.h  EmbeddedShaders.h  EmbeddedShadersVulkan.h  FileDialog.h  FluentApp.h  FontMSDF.h  FontManager.h  FontSystem.h  I18n.h  InputState.h  LayoutSerializer.h  MSDFGenerator.h  NullPlatform.h  OpenGLBackend.h  Panel.h  PlatformBackend.h  RenderBackend.h  Renderer.h  RippleEffect.h  SDLPlatform.h  SharedResourcePool.h  ShortcutRegistry.h  UIBuilder.h  UIEvent.h  UIKey.h  UndoSystem.h  VulkanBackend.h  WidgetNode.h  WidgetNodes.h  WidgetTree.h
shaders/: fragment.glsl  image_fragment.glsl  image_vertex.glsl  text_fragment.glsl  text_fragment_msdf.glsl  text_vertex.glsl  text_vertex_msdf.glsl  vertex.glsl
src/: CMakeLists.txt
src/Core/: Accessibility.cpp  Button.cpp  Context.cpp  DockSystem.cpp  DragDrop.cpp  Element.cpp  FileDialog.cpp  FluentApp.cpp  FontMSDF.cpp  FontManager.cpp  FontSystem.cpp  I18n.cpp  InputState.cpp  LayoutSerializer.cpp  MSDFGenerator.cpp  OpenGLBackend.cpp  Panel.cpp  Renderer.cpp  SDLPlatform.cpp  UIBuilder.cpp  VulkanBackend.cpp
src/Demo/: DemoWindow.cpp  ItemPicker.cpp  StyleEditor.cpp
src/Theme/: FluentTheme.cpp  Material.cpp
src/UI/: BasicWidgets.cpp  CollectionWidgets.cpp  ContainerWidgets.cpp  DateTimeWidgets.cpp  FeedbackWidgets.cpp  InputWidgets.cpp  LayoutPrimitives.cpp  ListWidgets.cpp  MarkdownWidgets.cpp  MenuWidgets.cpp  NavigationWidgets.cpp  OverlayWidgets.cpp  PlotWidgets.cpp  SignatureControls.cpp  WidgetHelpers.cpp  Widgets.cpp
tests/: CMakeLists.txt  test_color.cpp  test_dock_system.cpp  test_generate_id.cpp  test_gpu_integration.cpp  test_layout_serializer.cpp  test_material_serialization.cpp  test_math.cpp  test_null_platform.cpp  test_shortcut_registry.cpp  test_undo_system.cpp  test_widgets_comprehensive.cpp
tools/: gen_icons.py  gen_text_atlas.sh  text_atlas_charset.txt
tools/shaders/: acrylic_composite.frag  acrylic_composite.vert  basic.frag  blur.vert  compile.sh  image.frag  kawase_down.frag  kawase_up.frag  msdf.frag  sdf_rect.frag  sdf_rect.vert  text.frag  ui.vert
